--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                                 <p class="text-muted">saya ismi,saya suka jajan dan jalan-jalan keliling kota,saya anak pertama dari 3 bersaudara,dan saya sangat menyayangi adik-adik saya,mereka lucu dan gemesin.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="https://www.instagram.com/septismi_02/profilecard/?igsh=MWRvMTJpNzZrbWk3bw=="><i class="bi bi-instagram"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-tiktok"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                    <a class="text-gradient" href="https://www.tiktok.com/@septiismirafaila1?_t=8rDWMH5AaCf&_r=1"><i class="bi bi-tiktok"></i></a>
+                                    <a class="text-gradient" href="https://github.com/Septiismi"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
                         </div>
