--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4">Nama saya Septi Ismi Rafaela</p>
-                                <p class="text-muted">saya ismi,saya suka jajan dan jalan-jalan keliling kota,saya anak pertama dari 3 bersaudara,dan saya sangat menyayangi adik-adik saya,mereka lucu dan gemesin.</p>
+                                <p class="lead fw-light mb-4">Hay Perkenalkan Nama Saya Septi Ismi Rafaela</p>
+                                <p class="text-muted">saya septi ismi,saya biasanya kalo di kampus di panggil ismi,hobi saya suka jajan dan jalan-jalan keliling kota,saya anak pertama dari 3 bersaudara,dan saya sangat menyayangi adik-adik saya,mereka lucu dan gemesin.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="https://www.instagram.com/septismi_02/profilecard/?igsh=MWRvMTJpNzZrbWk3bw=="><i class="bi bi-instagram"></i></a>
                                     <a class="text-gradient" href="https://www.tiktok.com/@septiismirafaila1?_t=8rDWMH5AaCf&_r=1"><i class="bi bi-tiktok"></i></a>
