--- a/Responsive_Portfolio_10-05-23-main/index.html
+++ b/Responsive_Portfolio_10-05-23-main/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>anak perempuan</title>
+    <title>Web Design Mastery | Responsive Portfolio</title>
   </head>
   <body>
     <nav>
@@ -33,10 +33,13 @@
         <div class="content">
           <p class="subtitle">HELLO</p>
           <h1 class="title">
-            I'm <span>Septi Ismi Rafaela<br />a</span> Mahasiswa
+            I'm <span>Mitchell<br />a</span> Web Developer
           </h1>
           <p class="description">
-            Selamat datang di profil saya Septi Ismi Rafaela,saya biasanya di panggil ismi,saya mahasiswa STIMIK ANTAR BANGSA,saya asal dari sumatra selatan dan tinggal di kota tangerang,saya di tangerang merantau.
+            Welcome to my web developer portfolio! I'm Mitchell, a skilled and
+            creative web developer with a passion for creating beautiful,
+            responsive, and user-friendly websites. I've worked on a variety of
+            web projects, ranging from personal blogs to e-commerce platforms.
           </p>
           <div class="action__btns">
             <button class="hire__me">Hire Me</button>
