--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <nav>
       <div class="nav__content">
-        <div class="logo"><a href="#">Mitchell</a></div>
+        <div class="logo"><a href="#">Septi Ismi Rafaela</a></div>
         <label for="check" class="checkbox">
           <i class="ri-menu-line"></i>
         </label>
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="image">
-          <img src="assets/profile.jpg" alt="profile" />
+          <img src="assets/fotosaya.jpeg" alt="profile" />
         </div>
       </div>
     </section>
