--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             I'm <span>Septi Ismi Rafaela<br />a</span> Mahasiswa
           </h1>
           <p class="description">
-            Selamat datang di profil saya Septi Ismi Rafaela,saya biasanya di panggil ismi,saya mahasiswa STIMIK ANTAR BANGSA,saya asal dari sumatra selatan dan tinggal di kota tangerang,saya di tangerang merantau.
+            Selamat datang di profil saya Septi Ismi Rafaela,saya biasanya di panggil ismi,saya mahasiswa STIMIK ANTAR BANGSA,saya asal dari sumatra selatan dan tinggal di kota tangerang,saya di tangerang merantau karena kuliah.
           </p>
           <div class="action__btns">
             <button class="hire__me">Hire Me</button>
